; ModuleID = '/home/carl/AnghaBench/git/extr_archive-zip.c_clamp32.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-zip.c_clamp32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @clamp32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @clamp32(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 4294967295, i64* %3, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp slt i64 %4, 4294967295
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  br label %9

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8, %6
  %10 = phi i64 [ %7, %6 ], [ 4294967295, %8 ]
  ret i64 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
